Update to latest.

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,7 +9,7 @@
 
     {{BASE_TAG}}
 
-    <link rel="stylesheet" href="assets/app.css">
+    <link rel="stylesheet" href="assets/some-test.css">
     <link rel="stylesheet" href="assets/qunit.css">
     <style>
       #ember-testing-container {
@@ -36,7 +36,7 @@
       window.ENV = {{ENV}};
     </script>
     <script src="assets/qunit.js"></script>
-    <script src="assets/app.js"></script>
+    <script src="assets/some-test.js"></script>
     <script src="testem.js"></script>
     <script>
       require('some-test/tests/test-helper');
