--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,13 @@
 
     {{BASE_TAG}}
 
-    <link rel="stylesheet" href="assets/app.css">
+    <link rel="stylesheet" href="assets/some-test.css">
   </head>
   <body>
     <script>
       window.ENV = {{ENV}};
     </script>
-    <script src="assets/app.js"></script>
+    <script src="assets/some-test.js"></script>
     <script>
       window.SomeTest = require('some-test/app')['default'].create(ENV.APP);
     </script>
