Update to latest blueprint.

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{BASE_TAG}}
 
+    <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/some-test.css">
   </head>
   <body>
