--- a/tests/index.html
+++ b/tests/index.html
@@ -9,6 +9,7 @@
 
     {{BASE_TAG}}
 
+    <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/some-test.css">
     <link rel="stylesheet" href="assets/qunit.css">
     <style>
