Update to ember-cli master.

--- a/tests/index.html
+++ b/tests/index.html
@@ -40,9 +40,9 @@
     <script src="assets/qunit-notifications.js"></script>
     <script src="assets/some-test.js"></script>
     <script src="testem.js"></script>
+    <script src="assets/test-loader.js"></script>
     <script>
       require('some-test/tests/test-helper');
-      require('some-test/tests/test-loader');
     </script>
   </body>
 </html>
