--- a/tests/index.html
+++ b/tests/index.html
@@ -38,11 +38,11 @@
     </script>
     <script src="assets/qunit.js"></script>
     <script src="assets/qunit-notifications.js"></script>
-    <script src="assets/some-test.js"></script>
+    <script src="assets/some-test.js" data-cover></script>
     <script src="testem.js"></script>
-    <script src="assets/test-loader.js"></script>
     <script>
       require('some-test/tests/test-helper');
     </script>
+    <script src="assets/test-loader.js"></script>
   </body>
 </html>
