Update to ember-cli master.

--- a/tests/index.html
+++ b/tests/index.html
@@ -38,7 +38,7 @@
     </script>
     <script src="assets/qunit.js"></script>
     <script src="assets/qunit-notifications.js"></script>
-    <script src="assets/some-test.js" data-cover></script>
+    <script src="assets/some-test.js"></script>
     <script src="testem.js"></script>
     <script>
       require('some-test/tests/test-helper');
