--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <script>
       window.SomeTestENV = {{ENV}};
     </script>
+    <script src="assets/vendor.js"></script>
     <script src="assets/some-test.js"></script>
     <script>
       window.SomeTest = require('some-test/app')['default'].create(SomeTestENV.APP);
