Update to ember-cli master.

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
   <body>
     <script>
       window.SomeTestENV = {{ENV}};
+      window.EmberENV = window.SomeTestENV.EmberENV;
     </script>
     <script src="assets/vendor.js"></script>
     <script src="assets/some-test.js"></script>
