--- a/tests/index.html
+++ b/tests/index.html
@@ -35,6 +35,7 @@
 
     <script>
       window.SomeTestENV = {{ENV}};
+      window.EmberENV = window.SomeTestENV.EmberENV;
     </script>
     <script src="assets/qunit.js"></script>
     <script src="assets/qunit-notifications.js"></script>
