--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,7 @@
   </head>
   <body>
     <script>
-      window.SomeTestENV = {{ENV}};
-      window.EmberENV = window.SomeTestENV.EmberENV;
+      window.EmberENV = {{EMBER_ENV}};
     </script>
     <script src="assets/vendor.js"></script>
     <script src="assets/some-test.js"></script>
