Update to latest ember-cli (45e80884948b9e0b5e0b5bf18f89e5c4a41ae7d5).

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <script src="assets/vendor.js"></script>
     <script src="assets/some-test.js"></script>
     <script>
-      window.SomeTest = require('some-test/app')['default'].create(SomeTestENV.APP);
+      window.SomeTest = require('some-test/app')['default'].create({{APP_CONFIG}});
     </script>
   </body>
 </html>
